[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.10"
clap = { version = "3", features = ["derive"] }
once_cell = "1"
crossbeam = "0.7"
parking_lot = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
cargo_toml = "0.18"
async-std = "1.5"
surf = "1.0.3"
futures = "0.3"
thiserror = "1.0"
zip = "0.5"
anyhow = "1.0"

[package.metadata.nuget_dependencies]
"Win2D.uwp" = "1.27.1"
